--- a/FoodApp/app/src/main/AndroidManifest.xml
+++ b/FoodApp/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.anhki.foodapp">
 
-    //cấp quyền truy cập vào bộ nhớ để sử dụng hình ảnh
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS"
         tools:ignore="ProtectedPermissions" />
 
@@ -14,33 +14,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
 
         <activity android:name=".DangNhapActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        // mỗi khi có acivity thì sẽ khai báo ở đây
-        <activity android:name=".DangKyActivity">
-
-        </activity>
-
-        <activity android:name=".TrangChuActicity">
-
-        </activity>
-
-        <activity android:name=".ThemThucDonActivity">
-
-        </activity>
+        <activity android:name=".DangKyActivity"/>
+        <activity android:name=".TrangChuActicity"/>
+        <activity android:name=".ThemThucDonActivity"/>
 
         <activity android:name=".ThemLoaiThucDonActivity"
             android:theme="@style/PopUpActivity"
             android:label="@string/loaithucdon">
-
         </activity>
 
         <activity android:name=".ThemBanAnActivity"
@@ -53,14 +43,11 @@
             android:label="@string/soluong">
         </activity>
 
-        <activity android:name=".ThanhToanActivity">
-
-        </activity>
+        <activity android:name=".ThanhToanActivity"/>
 
         <activity android:name=".SuaBanAnActivity"
             android:theme="@style/PopUpActivity"
             android:label="@string/sua">
         </activity>
     </application>
-
 </manifest>
